pkg/mod/github.com/!michael!robotics/!kubernetes@v0.0.0-20250313134824-71cf651287f2/KEDA/k8s/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: michael
  labels:
    app: michael
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: michael
