pkg/mod/github.com/!michael!robotics/!kubernetes@v0.0.0-20250313134824-71cf651287f2/KEDA/k8s/ing.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: michael
  labels:
    app: michael
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: michael
                port:
                  number: 80
      host: dot.35.229.25.252.nip.io
